tests/sources/invalid/for_start_nonnumeric.minipl
for x in false..10 do
print x;
end for;